# dotfile-manager

./: Cargo.toml  README.md  justfile
src/: config.rs  dotfile.rs  facts.rs  lib.rs  link.rs  main.rs  nix.rs  util.rs
test-data/: dotfile-manager.toml  dotfiles-json.json  dotfiles-nix.nix  dotfiles-toml.toml  dotfiles-yml.yml  dotfiles.nix  fixed-size-file.txt
